--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
